--- a/basic-concepts.html
+++ b/basic-concepts.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Kieran Driscoll">
 
 
-<meta name="date" content="2019-01-28">
+<meta name="date" content="2019-02-04">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -199,6 +199,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="5.2.2" data-path="functions.html"><a href="functions.html#mathematical"><i class="fa fa-check"></i><b>5.2.2</b> Mathematical</a></li>
 <li class="chapter" data-level="5.2.3" data-path="functions.html"><a href="functions.html#properties-lookups"><i class="fa fa-check"></i><b>5.2.3</b> Properties &amp; Lookups</a></li>
 <li class="chapter" data-level="5.2.4" data-path="functions.html"><a href="functions.html#transformation"><i class="fa fa-check"></i><b>5.2.4</b> Transformation</a></li>
+<li class="chapter" data-level="5.2.5" data-path="functions.html"><a href="functions.html#other-useful-functions"><i class="fa fa-check"></i><b>5.2.5</b> Other useful functions</a></li>
 </ul></li>
 <li class="chapter" data-level="5.3" data-path="functions.html"><a href="functions.html#stringr---more-string-functions"><i class="fa fa-check"></i><b>5.3</b> Stringr - more string functions</a></li>
 <li class="chapter" data-level="5.4" data-path="functions.html"><a href="functions.html#lubridate---more-date-functions"><i class="fa fa-check"></i><b>5.4</b> Lubridate - more date functions</a></li>
@@ -215,14 +216,23 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="6.4" data-path="loops.html"><a href="loops.html#looping-with-apply-functions"><i class="fa fa-check"></i><b>6.4</b> Looping with apply functions</a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="tables.html"><a href="tables.html"><i class="fa fa-check"></i><b>7</b> Tables</a><ul>
-<li class="chapter" data-level="7.1" data-path="tables.html"><a href="tables.html#static-html-table---htmltable"><i class="fa fa-check"></i><b>7.1</b> Static HTML table - htmlTable</a></li>
-<li class="chapter" data-level="7.2" data-path="tables.html"><a href="tables.html#interactive-html-table---dt"><i class="fa fa-check"></i><b>7.2</b> Interactive HTML table - DT</a></li>
-<li class="chapter" data-level="7.3" data-path="tables.html"><a href="tables.html#cross-tabulations"><i class="fa fa-check"></i><b>7.3</b> Cross-Tabulations</a></li>
+<li class="chapter" data-level="7.1" data-path="tables.html"><a href="tables.html#displaying-tables---htmltable"><i class="fa fa-check"></i><b>7.1</b> Displaying tables - htmlTable</a></li>
+<li class="chapter" data-level="7.2" data-path="tables.html"><a href="tables.html#displaying-interactive-tables---dt"><i class="fa fa-check"></i><b>7.2</b> Displaying Interactive tables - DT</a></li>
+<li class="chapter" data-level="7.3" data-path="tables.html"><a href="tables.html#creating-tabulations"><i class="fa fa-check"></i><b>7.3</b> Creating Tabulations</a></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="charts.html"><a href="charts.html"><i class="fa fa-check"></i><b>8</b> Charts</a><ul>
 <li class="chapter" data-level="8.0.1" data-path="charts.html"><a href="charts.html#static-charts-with-ggplot2"><i class="fa fa-check"></i><b>8.0.1</b> Static charts with ggplot2</a></li>
-<li class="chapter" data-level="8.0.2" data-path="charts.html"><a href="charts.html#interactive-charts-with-ggiraph"><i class="fa fa-check"></i><b>8.0.2</b> Interactive charts with ggiraph</a></li>
-<li class="chapter" data-level="8.0.3" data-path="charts.html"><a href="charts.html#interactive-charts-with-dygraph"><i class="fa fa-check"></i><b>8.0.3</b> Interactive charts with dygraph</a></li>
+<li class="chapter" data-level="8.0.2" data-path="charts.html"><a href="charts.html#changing-axes"><i class="fa fa-check"></i><b>8.0.2</b> Changing Axes</a></li>
+<li class="chapter" data-level="8.0.3" data-path="charts.html"><a href="charts.html#chart-themes-styles"><i class="fa fa-check"></i><b>8.0.3</b> Chart Themes &amp; Styles</a></li>
+<li class="chapter" data-level="8.0.4" data-path="charts.html"><a href="charts.html#line-charts-geom_line"><i class="fa fa-check"></i><b>8.0.4</b> Line Charts (geom_line)</a></li>
+<li class="chapter" data-level="8.0.5" data-path="charts.html"><a href="charts.html#bar-charts-geom_bar-geom_histogram"><i class="fa fa-check"></i><b>8.0.5</b> Bar Charts (geom_bar &amp; geom_histogram)</a></li>
+<li class="chapter" data-level="8.0.6" data-path="charts.html"><a href="charts.html#adding-features"><i class="fa fa-check"></i><b>8.0.6</b> Adding features</a></li>
+<li class="chapter" data-level="8.0.7" data-path="charts.html"><a href="charts.html#heatmaps"><i class="fa fa-check"></i><b>8.0.7</b> Heatmaps</a></li>
+<li class="chapter" data-level="8.0.8" data-path="charts.html"><a href="charts.html#boxplots"><i class="fa fa-check"></i><b>8.0.8</b> Boxplots</a></li>
+<li class="chapter" data-level="8.0.9" data-path="charts.html"><a href="charts.html#combination-charts"><i class="fa fa-check"></i><b>8.0.9</b> Combination Charts</a></li>
+<li class="chapter" data-level="8.0.10" data-path="charts.html"><a href="charts.html#ggplot-wizard"><i class="fa fa-check"></i><b>8.0.10</b> ggplot wizard</a></li>
+<li class="chapter" data-level="8.0.11" data-path="charts.html"><a href="charts.html#interactive-charts-with-ggiraph"><i class="fa fa-check"></i><b>8.0.11</b> Interactive charts with ggiraph</a></li>
+<li class="chapter" data-level="8.0.12" data-path="charts.html"><a href="charts.html#interactive-charts-with-dygraph"><i class="fa fa-check"></i><b>8.0.12</b> Interactive charts with dygraph</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="maps.html"><a href="maps.html"><i class="fa fa-check"></i><b>9</b> Maps</a><ul>
 <li class="chapter" data-level="9.1" data-path="maps.html"><a href="maps.html#leaflet"><i class="fa fa-check"></i><b>9.1</b> Leaflet</a><ul>
